<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_delivery_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_place_of_delivery" />

        <Spinner
            android:id="@+id/spinner_delivery_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delivery_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_delivery_date" />

        <LinearLayout
            android:paddingLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_view_delivery_date"
                android:text="24 JUN 2020"
                android:textSize="18sp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:text="promeni"
                android:onClick="onClickSummonDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_delivery_place_single_choice"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_place_single_choice" />

        <TextView
            android:id="@+id/text_view_delivery_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Beograd" />

    </LinearLayout>

    <TextView
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes" />

    <EditText
        android:id="@+id/notes_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/notes_hint"
        android:lines="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom">

        <Button
            android:onClick="placeAnOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>